<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/common"
        layout="@layout/header" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/common"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/aboutus"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:text="@string/aboutus_company"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/aboutus_zongbu"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/aboutus_address"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/aboutus_phone"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/aboutus_chuanzhen"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/aboutus_youbian"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/aboutus_newwork"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/aboutus_email"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/abouts_rexian"
                android:textColor="#333333"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>