<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <include
        android:id="@+id/header_property_public"
        layout="@layout/header" />

   
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/bg_white"
        android:layout_marginTop="@dimen/faul_samllinterval"
        android:layout_height="@dimen/faulteta_tvHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin_iv"
            android:gravity="center_vertical"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize"
            android:text="@string/warning_time"/>

        <TextView
            android:id="@+id/tv_faultTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/menu_rightivSize"
            android:gravity="center_vertical"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize" />
    </RelativeLayout>
   
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/bg_white"
        android:layout_marginTop="@dimen/gad_space"
        android:layout_height="@dimen/faulteta_tvHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin_iv"
            android:gravity="center_vertical"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize"
            android:text="@string/warning_type"/>
        <TextView
            android:layout_marginRight="@dimen/menu_rightivSize"
            android:id="@+id/fault_lever"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textColor="@color/tv_title_color"
            android:textSize="12sp"
            android:text="@string/fault_type"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/bg_white"
        android:layout_marginTop="1dp"
        android:layout_height="@dimen/faulteta_tvHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin_iv"
            android:gravity="center_vertical"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize"
            android:text="@string/warning_level"/>

        <TextView
            android:id="@+id/tv_lever"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/menu_rightivSize"
            android:gravity="center_vertical"
            android:text="@string/high"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/bg_white"
        android:layout_marginTop="@dimen/gad_space"
        android:layout_height="@dimen/faulteta_tvHeight">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin_iv"
            android:gravity="center_vertical"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize"
            android:text="@string/warning_address"/>
        <ImageView
            android:id="@+id/iv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/menu_rightivSize"
            android:background="@drawable/tv_icon_arrow_right" />
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="2dp"
            android:layout_toLeftOf="@+id/iv_right"
            android:textColor="@color/tv_menu_color"
            android:textSize="@dimen/remark_textSize"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/faulteta_Height"
        android:text="@string/fault_details_description"
        android:textSize="@dimen/entirety_textSize"
        android:gravity="center"
        android:textColor="@color/tv_title_color"
        android:layout_marginLeft="@dimen/text_margin_iv"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="@dimen/faulteta_rlHeight">
        <TextView
            android:layout_marginLeft="@dimen/text_margin_iv"
            android:layout_marginRight="@dimen/menu_rightivSize"
            android:layout_marginTop="@dimen/tv_margin"
            android:layout_marginBottom="@dimen/faulteta_tvmargin"
            android:id="@+id/tv_faultData"
            android:lineSpacingExtra="@dimen/faulteta_tvmargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/remark_textSize"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/faul_samllinterval"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/gad_close_height"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="@string/clear_warning"
            android:gravity="center"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/topbar_textSize"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_determine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/theme_color"
            android:text="@string/confirm_warning"
            android:gravity="center"
            android:textSize="@dimen/topbar_textSize"
            android:textColor="@color/bg_color"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
