<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <include
            android:id="@+id/header_property_public"
            layout="@layout/header" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gad_close_height"
            android:layout_marginLeft="@dimen/text_margin_iv"
            android:gravity="center"
            android:text="@string/clear_alarm"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/gad_close_height"
                android:layout_marginLeft="@dimen/text_margin_iv"
                android:gravity="center"
                android:text="@string/clear_alarm_type"
                android:textColor="@color/tv_title_color"
                android:textSize="@dimen/entirety_textSize" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ll_type1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/ll_type1" />

                <RadioButton
                    android:id="@+id/ll_type2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ll_type2" />

                <RadioButton
                    android:id="@+id/ll_type3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ll_type3" />
            </RadioGroup>

        </LinearLayout>
        <!-- 告警等级-->
        <TextView
            android:id="@+id/tvAlarmLevel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gad_close_height"
            android:layout_marginLeft="@dimen/fault_rl_margin"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/fault_rl_margin"
            android:background="@drawable/icon_select"
            android:drawableRight="@drawable/icon_xiala"
            android:gravity="center_vertical"
            android:hint="@string/alarmLevel"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize" />
        <!-- 风险等级-->
        <TextView
            android:id="@+id/tvRiskLevel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gad_close_height"
            android:layout_marginLeft="@dimen/fault_rl_margin"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/fault_rl_margin"
            android:background="@drawable/icon_select"
            android:drawableRight="@drawable/icon_xiala"
            android:drawablePadding="30dp"
            android:gravity="center_vertical"
            android:hint="@string/riskLevel"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize" />

        <!-- 核实人-->
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fault_rl_margin"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/fault_rl_margin"
            android:background="@drawable/corners_bg"
            android:gravity="left"
            android:hint="@string/verifierName"
            android:padding="3dp"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/remark_textSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faul_samllinterval"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fault_rl_margin"
                android:layout_marginTop="@dimen/et_marginTop"
                android:layout_marginRight="@dimen/fault_rl_margin"
                android:layout_marginBottom="@dimen/fault_rl_margin"
                android:background="@drawable/corners_bg">

                <EditText
                    android:id="@+id/et_faultDeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:gravity="left"
                    android:hint="@string/clear_alarm_description"
                    android:maxHeight="@dimen/et_maxHeight"
                    android:maxLength="200"
                    android:minHeight="@dimen/et_minHeight"
                    android:textColor="@color/tv_title_color"
                    android:textSize="@dimen/remark_textSize" />

                <TextView
                    android:id="@+id/tv_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_faultDeta"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/iv_header_margin"
                    android:layout_marginBottom="@dimen/tv_margin"
                    android:text="0/200" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_iv"
            android:layout_marginTop="@dimen/faul_samllinterval"
            android:text="@string/upload_fault_picture"
            android:textColor="@color/tv_title_color"
            android:textSize="@dimen/entirety_textSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/faul_samllinterval"
            android:background="@color/white"
            android:minHeight="@dimen/gridview_minHeight">

            <com.bohui.widget.NoScrollGridView
                android:id="@+id/photoGrdview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:divider="@null"
                android:horizontalSpacing="10dp"
                android:listSelector="@color/bg_white"
                android:numColumns="4"
                android:scrollbars="none"
                android:verticalSpacing="10dp" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/line_menu_color"/>
        <TextView
            android:id="@+id/tv_latlng"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:drawableLeft="@drawable/icon_location"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:paddingLeft="@dimen/fault_rl_margin"
            android:paddingRight="@dimen/fault_rl_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_menu_color"/>
    </LinearLayout>
</ScrollView>
