<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/header_property_room"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/linearQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_property_room"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/tvAlarmLevel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gad_close_height"
            android:layout_weight="1"
            android:background="@drawable/icon_select"
            android:drawableRight="@drawable/icon_xiala"
            android:gravity="center_vertical"
            android:hint="@string/alarmLevel"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/tv_title_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvRiskLevel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gad_close_height"
            android:layout_weight="1"
            android:background="@drawable/icon_select"
            android:drawableRight="@drawable/icon_xiala"
            android:gravity="center_vertical"
            android:hint="@string/riskLevel"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/tv_title_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gad_close_height"
            android:layout_weight="1"
            android:background="@drawable/icon_select"
            android:drawableRight="@drawable/icon_xiala"
            android:gravity="center_vertical"
            android:hint="@string/start_time_text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/tv_title_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gad_close_height"
            android:layout_weight="1"
            android:background="@drawable/icon_select"
            android:drawableRight="@drawable/icon_xiala"
            android:gravity="center_vertical"
            android:hint="@string/end_time_text"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:textColor="@color/tv_title_color"
            android:textSize="12sp" />
    </LinearLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearQuery"
        android:background="@color/white"
        android:divider="#f4f4f4"
        android:dividerHeight="1px" />


</RelativeLayout>